--- a/SecondExercise/PietroPrandini_FundamentalsOfElectronics_SecondSPICEExercise.tex
+++ b/SecondExercise/PietroPrandini_FundamentalsOfElectronics_SecondSPICEExercise.tex
@@ -385,12 +385,12 @@ G_v = \frac{v_o}{v_{sig}} &= \frac{-g_m v_{sig} \left(1 - R_{sig} \frac{1}{R_{si
 \subsection{DC simulation - Operating Point}
 Same as the section \ref{DCsim}.
 
-\subsection{AC simulation without bypass capacitances - $Av$, $R_{IN}$ and $R_{OUT}$}
+\subsection{AC simulation without bypass capacitance - $Av$, $R_{IN}$ and $R_{OUT}$}
 \lstinputlisting{netlist/nmos_small_signal_RIN_ROUT_no_Cs.cir}
 The result confirm the analysis (result calculated in the section \ref{AvSecNoCs}, expression \ref{AvNoCs}).
 \lstinputlisting{netlist/nmos_small_signal_RIN_ROUT_no_Cs.tf}
 
-\subsection{AC simulation without bypass capacitances - $Gv$}
+\subsection{AC simulation without bypass capacitance - $Gv$}
 \lstinputlisting{netlist/nmos_small_signal_RIN_ROUT_with_Rs_Rl_no_Cs.cir}
 The result confirm the analysis (result calculated in the section \ref{GvSecNoCs}, expression \ref{GvNoCs}).
 \lstinputlisting{netlist/nmos_small_signal_RIN_ROUT_with_Rs_Rl_no_Cs.tf}
