Details about schematics and netlist
Former-commit-id: 6688248fd1ff9331443831385e733de3e5d811d5

--- a/ThirdExercise/PietroPrandini_FundamentalsOfElectronics_SecondSPICEExercise.tex
+++ b/ThirdExercise/PietroPrandini_FundamentalsOfElectronics_SecondSPICEExercise.tex
@@ -35,5 +35,13 @@ University of Padua (Italy)}}}
 
 \tableofcontents
 
+\chapter{Differential amplifier with MOS current source}
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=12cm]{schematics/DifferentialAmplifier.jpg}
+  \caption{Differential amplifier with MOS current source}
+  \label{DifferentialAmplifier}
+\end{figure}
 
 \end{document}
