--- a/ThirdExercise/PietroPrandini_FundamentalsOfElectronics_ThirdSPICEExercise.tex
+++ b/ThirdExercise/PietroPrandini_FundamentalsOfElectronics_ThirdSPICEExercise.tex
@@ -44,4 +44,8 @@ University of Padua (Italy)}}}
   \label{DifferentialAmplifier}
 \end{figure}
 
+\section{SPICE Operating Point analysis}
+\lstinputlisting{netlist/DifferentialAmplifier.cir}
+\lstinputlisting{netlist/DifferentialAmplifier.op}
+
 \end{document}
