--- a/ThirdExercise/PietroPrandini_FundamentalsOfElectronics_ThirdSPICEExercise.tex
+++ b/ThirdExercise/PietroPrandini_FundamentalsOfElectronics_ThirdSPICEExercise.tex
@@ -44,6 +44,52 @@ University of Padua (Italy)}}}
   \label{DifferentialAmplifier}
 \end{figure}
 
+Data:\\
+\begin{align}
+V_t = 0.5V\\
+{K'}_n = {\mu}_n C_{ox} = 200 \frac{\mu A}{V^2}\\
+\lambda = 0\\
+\left(\frac{W}{L}\right)_1 = \left(\frac{W}{L}\right)_2 = 20\\
+\left(\frac{W}{L}\right)_3 = \left(\frac{W}{L}\right)_4 = 5\\
+R_{D_1} = R_{D_2} = 20k\Omega\\
+R_{D_4} = \frac{30}{1000}\cdot 1097752 \Omega = 32.93k\Omega \simeq 33k\Omega\\
+V_{DD} = 3V\\
+V_{SS} = -3V
+\end{align}
+
+\section{MOSFET current mirror source - Analytic solution}
+\subsection{$I_{D_4}$}
+The transistor $M_4$ has a short circuit between its drain and its gate, so the transistor works in saturation mode.\\
+The current $I_{D_4}$ could be calculated as:\\
+\begin{align}
+I_{D_4} &= \frac{1}{2}{K'}_n \left(\frac{W}{L}\right)_4 (V_{D_4} - V_{SS} - V_t)^2 \label{ID4Sat}
+\end{align}
+Other expression of the current $I_{D_4}$ is:\\
+\begin{align}
+I_{D_4} = \frac{V_{DD} -(V_{D_4} - V_{SS})}{R_{D_4}}\label{ID4K}
+\end{align}
+Using the equations \ref{ID4Sat} and \ref{ID4K} it's possible calculating $V_{D_4}$:\\
+\begin{align}
+\frac{1}{2}{K'}_n \left(\frac{W}{L}\right)_4 (V_{D_4} - V_{SS} - V_t)^2 = \frac{V_{DD} - (V_{D_4} - V_{SS})}{R_{D_4}}
+\end{align}
+\begin{align}
+\frac{1}{2}\cdot 200 \frac{\mu A}{V^2} \cdot 5 \frac{\mu m}{\mu m} (V_{D_4} - (-3V) - 0.5V)^2 = \frac{3V - V_{D_4} + (-3V)}{33k\Omega}\\
+500 \frac{\mu A}{V^2} (V_{D_4} +2.5V)^2 = -\frac{1}{33k\Omega}V_{D_4}\\
+500 \frac{\mu A}{V^2} (V_{D_4}^2+5V\cdot V_{D_4} +6.25V) = -\frac{1}{33k\Omega}V_{D_4}\\
+500 \frac{\mu A}{V^2} \cdot V_{D_4}^2 + \left(500 \frac{\mu A}{V^2} \cdot 5V + \frac{1}{33k\Omega}\right) V_{D_4} + 500 \frac{\mu A}{V^2} \cdot 6.25V = 0\\
+0.5 \frac{mA}{V^2} \cdot V_{D_4}^2 + \left(0.5 \frac{mA}{V^2} \cdot 5V + \frac{1}{33k\Omega}\right) V_{D_4} + 0.5 \frac{mA}{V^2} \cdot 6.25V = 0\\
+\left(0.5 \frac{mA}{V^2}\right) V_{D_4}^2 + \left(2\cdot\frac{35}{66}\frac{mA}{V}\right) V_{D_4} + \left(3\cdot\frac{1}{8}mA\right) = 0
+\end{align}
+\begin{align}
+V_{D_{4_{1,2}}} = \frac{-\left(2\cdot\frac{35}{66}\frac{mA}{V}\right)\pm \sqrt{\left(2\cdot\frac{35}{66}\frac{mA}{V}\right)^2-4\cdot\left(0.5 \frac{mA}{V^2}\right)\cdot\left(3\cdot\frac{1}{8}mA\right)}}{2\cdot0.5 \frac{mA}{V^2}} = 
+\left\{
+\begin{array}{l}
+-0.44833V\\
+-1.67288V\\
+\end{array}
+\right.
+\end{align}
+
 \section{SPICE Operating Point analysis}
 \lstinputlisting{netlist/DifferentialAmplifier.cir}
 \lstinputlisting{netlist/DifferentialAmplifier.op}
