--- a/ThirdExercise/PietroPrandini_FundamentalsOfElectronics_ThirdSPICEExercise.tex
+++ b/ThirdExercise/PietroPrandini_FundamentalsOfElectronics_ThirdSPICEExercise.tex
@@ -240,11 +240,19 @@ g_{m_1} = g_{m_2} &= K'_n \left(\frac{W}{L}\right)_1 (V_{G_1S_A} - V_t)\\
 &= 200 \frac{\mu A}{V^2} \cdot 20 \frac{\mu A}{\mu A} \cdot (0.69369V-0.5V)\\
 &= 774.76 \mu A/V
 \end{align}
+
+\subsection{MOSFET $M_3$ with $\lambda = 0.02$}
+From now the MOSFET $M_3$ is considered with $\lambda = 0.02$.\par
+On this way there are some changes of the voltages and the currents of the circuit but they could be considered negligible, so it's considered true the past result from now too.\par
+With $\lambda = 0.02$, the $r_0$ has a finite value:\\
 \begin{align}
-g_{m_3} = g_{m_4} &= K'_n \left(\frac{W}{L}\right)_3 (V_{D_4SS} - V_t)\\
-&= 200 \frac{\mu A}{V^2} \cdot 5 \frac{\mu A}{\mu A} \cdot (1.04784V-0.5V)\\
-&= 547.80 \mu A/V
+r_0 &= \frac{1}{\lambda I_{S_A}}
+= \frac{1}{0.02 \cdot 150.06433 \mu A}
+\simeq 333.2k\Omega
 \end{align}
+
+\subsection{Differential gain}
+
 
 \section{SPICE analysis}
 \subsection{Operating Point on static conditions}
